// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Result component should render correct markup dilation and errorDetail props are defined 1`] = `
<Result__AnimatedContentTransition>
  <div>
    [
 1,
 2,
 3,
 4
]
  </div>
  <ErrorMessage
    errorDetails={[Error: Test-Error]}
  />
</Result__AnimatedContentTransition>
`;

exports[`Result component should render correct markup dilation prop is defined 1`] = `
<Result__AnimatedContentTransition>
  <div>
    [
 1,
 2,
 3,
 4
]
  </div>
</Result__AnimatedContentTransition>
`;

exports[`Result component should render correct markup errorDetail props is defined 1`] = `
<Result__AnimatedContentTransition>
  <ErrorMessage
    errorDetails={[Error: Test-Error]}
  />
</Result__AnimatedContentTransition>
`;

exports[`Result component should render correct markup when error and dilation are undefined 1`] = `<Result__AnimatedContentTransition />`;
